Fixed color scheme of page, still look bad

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="tribute, name, lastname">
     <meta name="author" content="Matias Viera">
     <meta name="viewport" content="width: device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="C:\Users\Mati\github\tribute\style.css" media="screen" />
 </head>
 <header>
 
@@ -25,12 +26,11 @@
     </div>
 
     <div id="tribute-info">
-        <hr>
         <p><strong>Carl Friedrich Gauss</strong> (30 April 1777 – 23 February 1855) was a German mathematician and physicist who made significant
         contributions to many fields in mathematics and science. Sometimes referred to as the <em>Princeps mathematicorum</em>
         (Latin for '"the foremost of mathematicians"') and "the greatest mathematician since antiquity", Gauss had an exceptional influence
         in many fields of mathematics and science, and is ranked among history's most influential mathematicians
-        </p><hr>
+        </p>
         <h2>Gauss timeline</h3>
         <ul>
             <li><strong>1777</strong>- Born in Burnswick, Dutchy of Burnswick</li>
@@ -45,7 +45,6 @@
     </div>
 
     <div id="tribute-link">
-        <hr>
         <h3>If you have time, you should read more about this incredible human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Carl_Friedrich_Gauss#Biography">biography</a></h3>
     </div>
 </main>
